# recipes

./: CNAME  aghroum.html  aghroum.md  bas_carre_de_veau_moutarde.html  bas_carre_de_veau_moutarde.md  bechamel.html  bechamel.md  blanquette_de_veau.html  blanquette_de_veau.md  blettes_a_la_tomate.html  blettes_a_la_tomate.md  boeuf_effiloche.html  boeuf_effiloche.md  boeuf_mafe.html  boeuf_mafe.md  brownie.html  brownie.md  carnitas.html  carnitas.md  celeri_rave_roti.html  celeri_rave_roti.md  chapon.html  chapon.md  chou-rouge-confit.html  chou-rouge-confit.md  chou_blanc_patates.html  chou_blanc_patates.md  chou_fleur_roti.html  chou_fleur_roti.md  compote_de_pommes.html  compote_de_pommes.md  crepes.html  crepes.md  croute_forestiere.html  croute_forestiere.md  cuisses_de_canard_roties.html  cuisses_de_canard_roties.md  cuisses_de_poulet_au_epices.html  cuisses_de_poulet_au_epices.md  cuisses_de_poulet_au_miel.html  (+73 more)
scripts/: deploy  main.py  pyproject.toml
