[tool.poetry]
name = "recipes"
version = "0.1.0"
description = ""
authors = ["Antoine Wendlinger <awendlinger@mytraffic.fr>"]

[tool.poetry.dependencies]
python = "^3.7"
Markdown = "^3.3.4"
beautifulsoup4 = "^4.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
